2003-11-26  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* fdesign/fd_forms.c (save_forms): do not try to remove twice ".fd"
	from file name (avoids problem with path names containing a '.').

2003-11-25  Clive A Stubbings <xforms2@vjet.demon.co.uk>

	* image/image_gif.c (flush_buffer): new static function, containig ]
	code factored out of process_lzw_code.
	(process_lzw_code): invoke flush_buffer where old code was in
	process_lzw_code itself. In addition, also invoke flush_buffer
	when cleaning up after an old-style gif image.

	* image/image_jpeg.c (JPEG_identify): handle 'raw' JPEG images
	without the JFIF header.

2003-11-26  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/boxtype.c: squash warning about uninitialized data.

2003-11-24  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/sp_menu.c (emit_menu_header): output properly initialized
	C-code.

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Makefile.am: enable the conditional building of the demo
	GL codes.

	* demos/gl.c:
	* demos/glwin.c: #include gl/glcanvas.h and so prevent warnings
	about implicit function declarations.

2003-11-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* lib/local.h: do not define HAVE_KP_DEFINE

	* lib/flinternal.h: test directly for X11 version here

	* lib/forms.c (fl_keyboard): 
	* lib/flcolor.c (fl_mapcolor, fl_dump_state_info): 
	* lib/xpopup.c (fl_addtopup): 
	* lib/clock.c (draw_clock): use proper ML_xxx macros instead of
	bogus names

2003-11-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/events.c:
	* lib/fldraw.c:
	* lib/forms.c:
	* lib/xpopup.c:
	* lib/xsupport.c:

	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jpeg.c:
	* image/image_replace.c:
	* image/image_tiff.c:
	* image/ps_core.c:
	* image/ps_draw.c:

	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jpeg.c:
	* image/image_replace.c:
	* image/image_tiff.c:
	* image/image_xwd.c:
	* image/ps_core.c:
	* image/ps_draw.c:
